django-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployment
spec:
  ingressClassName: nginx
  rules:
  - host: "dee.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-service
            port:
              number: 80
